--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
- "proxy": "https:localhost/5000",
+ "proxy": "https://csci426-project.onrender.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
